# harbor-box

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: release.md
examples/: dockerfile_to_box.py
sdks/: harbor_box_environment.py
sdks/harbor-box-evals/: .gitignore  README.md  adapter_test.py  box_claude_agent.py  conftest.py  evals_test.py  example_run.py  pytest.ini
sdks/harbor-box-evals/agent/: agent.mjs  package-lock.json  package.json
